--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       .full-width-input {
           width: 100%;         /* Makes the input take up 100% of its parent's width */
           box-sizing: border-box; /* Includes padding and border in the element's width */
-          font-size: x-large;
+          font-size: large;
           font-family: 'Arial', sans-serif;
       }
       .body {
