--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <div>
         <form onsubmit="handleSubmit(event)">
           <input id="fen" class="full-width-input" value="" id="fen" />
+          <button onclick="window.location.href='/'; return false" type="submit">New</button>
           <button type="submit">start with FEN</button>
-          <button onclick="window.location.href='/'; return false" type="submit">HOME</button>
           <a href="https://www.chessprogramming.org/Perft_Results" target="_blank" class="body">FEN library</a>
         </form>
 
