--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <script src="p5.min.js"></script>
     <script src="chess.js"></script>
     <script src="game.js"></script>
+    <script src="board-pieces.js"></script>
+    <script src="board-data.js"></script>
+    <script src="board-moves.js"></script>
+    <script src="history.js"></script>
     <script src="board.js"></script>
     <script src="computerplayers.js"></script>
     <script>
