fix limiting moves by pinned pieces

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <button onclick="window.location.href='/'; return false" type="submit">New</button>
           <button type="submit">start with FEN</button>
           <a href="https://www.chessprogramming.org/Perft_Results" target="_blank" class="body">FEN library</a>
+          &nbsp;&nbsp;&nbsp;Time last move: <span id="timeLastMove"></span>
         </form>
 
         <form id="computerForm" style="display: flex;padding:10px;">
