--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <button onclick="window.location.href='/'; return false" type="submit">New</button>
           <button type="submit">start with FEN</button>
           <button onclick="undoLastMove(); return false" type="button">Undo</button>
+          <button onclick="testMoves(); return false" type="button">Test moves</button>
           <a href="https://www.chessprogramming.org/Perft_Results" target="_blank" class="body">FEN library</a>
           &nbsp;&nbsp;&nbsp;Time last move: <span id="timeLastMove"></span>
         </form>
