--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Coding challenge - Tetris</title>
+    <title>Coding challenge - Chess</title>
     <style>
       body {
         padding: 0;
