add new computer minmax

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
           <fieldset class="computer-switcher">
               <legend>BLACK computer</legend>
               <label>
-                  <input type="radio" name="blackPower" value="ON" onchange="updateStatus('black', 'ON')" >
+                  <input type="radio" name="blackPower" value="ON" onchange="updateStatus('black', 'ON')" checked>
                   ON
               </label>
               <label>
-                  <input type="radio" name="blackPower" value="OFF" onchange="updateStatus('black', 'OFF')" checked>
+                  <input type="radio" name="blackPower" value="OFF" onchange="updateStatus('black', 'OFF')" >
                   OFF
               </label>
           </fieldset>
