impl alpha beta, zobrist + transition tables

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <script src="chess.js"></script>
     <script src="game.js"></script>
     <script src="board-pieces.js"></script>
+    <script src="zobrist.js"></script>
+    <script src="bit-board.js"></script>
+    <script src="transposition-table.js"></script>
+    <script src="alpha-beta.js"></script>
     <script src="board-data.js"></script>
     <script src="board-moves.js"></script>
     <script src="history.js"></script>
